--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    font-family: 'Indie Flower', cursive;
     margin: 0;
 }
 #container{
@@ -34,6 +35,7 @@ body{
     width: 100%;
     height: 100%;
     background-color: #8e44ad;
+    font-family: 'Indie Flower', cursive;
     font-size: xx-large;
     color: powderblue;
 }
