--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
 }
 #game{
     background-color: green;
+    border: solid black;
 }
 #bottom{
     display: grid;
@@ -48,9 +49,14 @@ body{
 }
 .gameOver{
     position: relative;
-    display: inline;
+    width: 300px;
+    height: 150px;
+    font-size: 57px;
     background-color: thistle;
     border: solid white;
+    text-align: center;
     top: 50%;
     left: 50%;
+    margin-top: -75px;
+    margin-left: -150px;
 }
